# platform.core.security.privilege-checker

./: CMakeLists.txt  project.config
capi/: CMakeLists.txt  capi-security-privilege-manager.pc.in  security-privilege-manager.pc.in
capi/include/: .privilege_info.h.swp  privilege_checker.h  privilege_db_manager.h  privilege_info.h  privilege_info_types.h  privilege_manager.h
capi/res/dbspace/: CMakeLists.txt  core_db_generator.sh  core_mapping_db_generator.sh  core_privilege_info.csv  core_privilege_info.db  core_privilege_mapping.csv  core_privilege_mapping.db  internal_only.list  policy_db_generator.sh  tv_core_db_generator.sh  tv_core_mapping_db_generator.sh  tv_core_privilege_info.csv  tv_core_privilege_info.db  tv_core_privilege_mapping.csv  tv_core_privilege_mapping.db  tv_wrt_db_generator.sh  tv_wrt_mapping_db_generator.sh  tv_wrt_privilege_info.csv  tv_wrt_privilege_info.db  tv_wrt_privilege_mapping.csv  tv_wrt_privilege_mapping.db  update_valid_info_table.sh  wrt_db_generator.sh  wrt_mapping_db_generator.sh  wrt_privilege_info.csv  wrt_privilege_info.db  wrt_privilege_mapping.csv  wrt_privilege_mapping.db
capi/res/string/: ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  (+20 more)
capi/src/: privilege_checker.c  privilege_db_manager.c  privilege_info.c  privilege_manager.c
include/: Parser.h  Util.h
packaging/: privilege-checker.manifest  privilege-checker.spec
src/: DbManager.cpp  Main.cpp  Parser.cpp
test/: CMakeLists.txt  tc-common.c  tc-common.h  tc-privilege-black-list.c  tc-privilege-db-manager.c  tc-privilege-info.c  tc-privilege-manager.c
tool/: CMakeLists.txt  privilege-verifier.c
util/: CMakeLists.txt
util/include/: CheckerTypes.h  DbManager.h  Parser.h  Util.h
util/res/opt/dbspace/: .privilegelist.db
util/src/: DbManager.cpp  Main.cpp  Parser.cpp  Util.cpp
