CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

MESSAGE("build privilege-checker")

SET(CMAKE_VERBOSE_MAKEFILE OFF)

SET(BINDIR "${PREFIX}/bin")

IF("${USE_AUTOSTART}" STREQUAL "1")
	ADD_DEFINITIONS("-DUSE_AUTOSTART")
ENDIF()

ADD_DEFINITIONS("-DCLIENT_IPC_THREAD")
ADD_DEFINITIONS("-DUSE_IPC_EPOLL")

STRING(REGEX MATCH "([^.]*)" API_VERSION "${VERSION}")
ADD_DEFINITIONS("-DAPI_VERSION=\"$(API_VERSION)\"")

ADD_SUBDIRECTORY(capi)
ADD_SUBDIRECTORY(test)
