CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(fw_name "capi-security-privilege-manager")

PROJECT(${fw_name})

SET(CMAKE_INSTALL_PREFIX /usr)
SET(PREFIX ${CMAKE_INSTALL_PREFIX})

SET(INC_DIR include)

INCLUDE_DIRECTORIES(
	"${INC_DIR}" 
	)
	
SET(pc_requires "capi-base-common")

INCLUDE(FindPkgConfig)
pkg_check_modules(${fw_name} REQUIRED capi-base-common dlog	vconf pkgmgr-info)
FOREACH(flag ${${fw_name}_CFLAGS})
    SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -fPIC -Wall -Werror")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")

IF("${ARCH}" STREQUAL "arm")
    ADD_DEFINITIONS("-DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DSLP_DEBUG")

SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -Wl,--rpath=/usr/lib")

aux_source_directory(src SOURCES)
ADD_LIBRARY(${fw_name} SHARED ${SOURCES})

TARGET_LINK_LIBRARIES(${fw_name} ${${fw_name}_LDFLAGS})

SET_TARGET_PROPERTIES(${fw_name} 
    PROPERTIES 
    SOVERSION ${API_VERSION} 
    VERSION ${VERSION} 
    CLEAN_DIRECT_OUTPUT 1
)

INSTALL(TARGETS ${fw_name} DESTINATION ${LIB_INSTALL_DIR})
INSTALL(
        DIRECTORY ${INC_DIR}/ DESTINATION ${INCLUDE_INSTALL_DIR}/privilegemgr
        FILES_MATCHING
        PATTERN "*_private.h" EXCLUDE
        PATTERN "${INC_DIR}/*.h"
        )

SET(PC_NAME ${fw_name})
SET(PC_REQUIRED ${pc_requires})
SET(PC_LDFLAGS -l${fw_name})
SET(PC_CFLAGS -I\${includedir}/privilegemgr)


IF(UNIX)

ADD_CUSTOM_TARGET (distclean @echo cleaning for source distribution)
ADD_CUSTOM_COMMAND(
        DEPENDS clean 
        COMMENT "distribution clean"
        COMMAND find
        ARGS    . 
        -not -name config.cmake -and \(
        -name tester.c -or
        -name Testing -or
        -name CMakeFiles -or
        -name cmake.depends -or
        -name cmake.check_depends -or
        -name CMakeCache.txt -or
        -name cmake.check_cache -or
        -name *.cmake -or
        -name Makefile -or
        -name core -or
        -name core.* -or
        -name gmon.out -or
        -name install_manifest.txt -or
        -name *.pc -or
        -name *~ \)
        | grep -v TC | xargs rm -rf
        TARGET  distclean
        VERBATIM
)

ENDIF(UNIX)


SET(ROOT_DIR ${CMAKE_SOURCE_DIR}/cmake_build_tmp/output)
SET(LOCALE_ROOT_PATH "${ROOT_DIR}/target/generic/root/usr/share/locale")

FILE(GLOB _pofiles res/string/*.po)

FOREACH(_file ${_pofiles})
	GET_FILENAME_COMPONENT(_in ${_file} ABSOLUTE)
	GET_FILENAME_COMPONENT(_basename ${_file} NAME_WE)

	SET(_out "${LOCALE_ROOT_PATH}/${_basename}/LC_MESSAGES/privilege.mo")

	ADD_CUSTOM_COMMAND(
		OUTPUT ${_out}
		COMMENT "Generating ${_out}"
		COMMAND mkdir -p ${LOCALE_ROOT_PATH}/${_basename}/LC_MESSAGES
		COMMAND msgfmt -o ${_out} ${_in}
		DEPENDS ${_in}
		)

	SET(mo_files ${mo_files} ${_out})

	#INSTALL(FILES ${_out} DESTINATION "${_out}")
ENDFOREACH(_file ${_pofiles})

ADD_CUSTOM_TARGET(privilege-string ALL DEPENDS ${mo_files})

INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/cmake_build_tmp/output/target/generic/root/usr/share/locale DESTINATION ${SHARE_INSTALL_PREFIX})


