CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(PACKAGE_NAME privilege-verifier)
PROJECT(${PACKAGE_NAME})

SET(PRIVILEGE_VERIFIER_SRCS
	${PACKAGE_NAME}.c
	${CMAKE_SOURCE_DIR}/capi/src/privilege_manager.c
	${CMAKE_SOURCE_DIR}/capi/src/privilege_db_manager.c
)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/capi/include)

IF("${PROFILE_TYPE}" STREQUAL "WEARABLE")
    ADD_DEFINITIONS("-DPROFILE_TYPE_WEARABLE")
ELSEIF("${PROFILE_TYPE}" STREQUAL "MOBILE")
    ADD_DEFINITIONS("-DPROFILE_TYPE_MOBILE")
ELSEIF("${PROFILE_TYPE}" STREQUAL "TV")
    ADD_DEFINITIONS("-DPROFILE_TYPE_TV")
ENDIF()

INCLUDE(FindPkgConfig)
pkg_check_modules(${PACKAGE_NAME} REQUIRED glib-2.0 sqlite3)
FOREACH(flag ${${PACKAGE_NAME}_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fPIE -fvisibility=hidden -static-libgcc -static-libstdc++")

ADD_DEFINITIONS(-DPRIVILEGE_INFO_CORE_DB_PATH="core_privilege_info.db")
ADD_DEFINITIONS(-DPRIVILEGE_INFO_WRT_DB_PATH="wrt_privilege_info.db")
ADD_DEFINITIONS(-DPRIVILEGE_MAPPING_CORE_DB_PATH="core_privilege_mapping.db")
ADD_DEFINITIONS(-DPRIVILEGE_MAPPING_WRT_DB_PATH="wrt_privilege_mapping.db")
ADD_DEFINITIONS(-DPRIVILEGE_POLICY_DB_PATH="policy.db")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

ADD_EXECUTABLE(${PACKAGE_NAME} ${PRIVILEGE_VERIFIER_SRCS})
TARGET_LINK_LIBRARIES(${PACKAGE_NAME} ${${PACKAGE_NAME}_LDFLAGS})

INSTALL(TARGETS ${PACKAGE_NAME} DESTINATION /usr/bin)

